test/cases/parser/ArrayDim4.errors
src/ArrayDim4.b:6:16: Syntax error (invalid array specification)
