test/cases/parser/ArrayDim4.b
// mixture of fixed and variable sized array dimensions

module ArrayDim4

interface {
    type foo = i32[1,*,2];
}
